fix small TextTag alignment

--- a/src/shared/Shared.module.css
+++ b/src/shared/Shared.module.css
@@ -3,6 +3,12 @@
   height: 1em;
 }
 
+.texttag,
+.texttag span {
+  /* align smaller text vertically */
+  vertical-align: middle;
+}
+
 .texttagnobreak {
   white-space: nowrap;
 }
